--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
         }
     ],
     "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {"yetupay\\api\\": "src/"}
+    },
     "require": {}
 }
